--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Tiago Rosa</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="Tiago Henrique da Rosa" content="Portfólio Tiago  Henrique da Rosa "/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
